# BEAT

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: demo.yaml  generate_demo.py
docs/: ADAPTIVE_SELECTION.md  CONFIG_REFERENCE.md  INJECTION_RECOVERY.md  MIRI.md  MUSE.md  NIRSPEC.md  V1_AUDIT_AND_ROADMAP.md
examples/: ascii_spectra.yaml  miri_nev.yaml  muse_halpha_nii.yaml  nirspec_g235h_sivi.yaml  nirspec_g395h_bralpha.yaml  survey_table.yaml
pilot/: CHECKSUMS.txt  MANIFEST.json  PILOT_FEEDBACK.md  RELEASE_NOTES.md  environment.yml  requirements.txt
release/: BEAT-2.0.0a2-astronomer-pilot-20260720.zip.sha256  GITHUB_RELEASE_v2.0.0a2.md
releases/: BEAT-2.0.0a1-astronomer-pilot-20260717.zip.sha256  GITHUB_RELEASE_v2.0.0a1.md
tests/: test_core.py  test_fits_integration.py  test_miri_validation.py  test_muse_validation.py  test_ngc1365_broad_stability.py  test_nirspec_validation.py  test_survey_regression.py  test_three_component_calibration.py
validation/: ALPHA_TEST_REPORT.md  HALPHA_CONTROLLED_TRIPLE_CALIBRATION.md  HALPHA_THREE_COMPONENT_PILOT.md  MIRI_BOUNDED_GATE_PLAN.md  MIRI_BOUNDED_VALIDATION.md  MUSE_POWERED_VALIDATION.md  NGC1365_BROAD_STABILITY.md  NGC1365_BROAD_STABILITY_GATE_PLAN.md  NGC2992_FALSE_POSITIVE_AUDIT.md  NIRSPEC_G235H_WEAK_COMPONENT_BOUNDARY.md  NIRSPEC_INJECTION_RECOVERY.md  SURVEY_1D_REGRESSION.md  SURVEY_1D_REGRESSION_GATE_PLAN.md  freeze_muse_powered_gate.py  run_miri_bounded_validation.py  run_muse_powered_validation.py  run_ngc1365_broad_stability.py  run_nirspec_injection_recovery.py  run_survey_1d_regression.py
(+12 files in other folders)
