[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-astro"
version = "2.0.0a1"
description = "Bayesian Evidence Analysis Tool for multi-component emission-line fitting"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
dependencies = [
  "astropy>=5.3",
  "matplotlib>=3.7",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "ultranest>=4.4",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[project.scripts]
beat = "beat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beat = ["calibration/*.fits"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
